Generate open api json file as well

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -13,3 +13,8 @@ plugins:
     out: gen
     opt:
       - paths=source_relative
+  - remote: buf.build/grpc-ecosystem/openapiv2
+    out: doc
+    opt:
+      - allow_merge=true
+      - merge_file_name=api
