Update buf workflow to compare in dev branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,7 @@ name: Release & Tag
 on:
   push:
     branches:
-      - main
-      - pre-release
+      - 'main'
 
 env:
   # Use docker.io for Docker Hub if empty
