--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Injest Go Tags
         run: |
           buf generate
+          buf dep update
           go install github.com/favadi/protoc-go-inject-tag@latest
           find gen -name "*.pb.go" -exec protoc-go-inject-tag -input={} \;
 
