Update workflow to publish code change in both gen and doc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Commit and push generated files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "auto: Refresh protobuf generated files in ./gen/"
+          commit_message: "auto: Refresh protobuf generated files in ./gen/ and ./doc/"
           commit_options: '--no-verify'
-          file_pattern: 'gen/'
+          file_pattern: 'gen/ doc/'
           branch: ${{ github.ref_name }}
